--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-discord.py>=2.3
-python-dotenv>=1.0
+discord.py==2.3.2
+python-dotenv==1.0.0
+google-api-python-client==2.100.0
+aiohttp==3.8.5
+asyncio
