--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-discord.py==2.3.2
+git+https://github.com/Pycord-Development/pycord.git
 python-dotenv==1.0.0
 google-api-python-client==2.100.0
 aiohttp>=3.9.5
